--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="task-3-css/style.css" />
 
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Unna:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -14,7 +23,7 @@
       <!-- TEAM C-->
       <section id="Canvas" class="teamCanvas">
         <h5>Click through: </h5>
-        <div class = "team-nav"><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p></div>
+        <div class = "team-nav"><p>1</p><p>2</p><p>3</p><p>4</p></div>
         <div class = "aniCanvas" id = "ani_canv_A" style ="display:none;"></div>
         <div class = "aniCanvas" id = "ani_canv_B" style ="display:none;"></div>
         <div class = "aniCanvas" id = "ani_canv_C" style ="display:none;"></div>
@@ -27,6 +36,9 @@
   <!-- CART 263 TEAMS-->
    <script src= "task-3-js/buttonsAndFrame.js"></script>
   <script src="task-3-js/team-c.js"></script>
+  <script src="js/libraries/p5.min.js"></script>
+  <!-- p5.sound.min.js allows us to use sound -->
+  <script src="js/libraries/p5.sound.min.js"></script>
 
 </body>
 
